# ghdemoreponov18

./: 3.5 Transient sensitive data is.txt  DynamicTextbox.razor  PCI-Secure-Software-Standard-v1_2_1.pdf.docx  README.md  adam.cs  adam2.py  adam3tests.cs  adamtests1.cs  calculator.cs  control6.txt  dockerfile  gh-copilot-demo.sln  long python file.py  package.json  pccdss.md
.github/: copilot-instructions.md
ADVWRKS/: ADVWRKS.sqlproj
ADV_DB/: AW2014FullTextCatalog.FullTextCatalog.sql  AdventureWorks2014.Database.sql  HumanResources.Department.Table.sql  HumanResources.Employee.Table.sql  HumanResources.EmployeeDepartmentHistory.Table.sql  HumanResources.EmployeePayHistory.Table.sql  HumanResources.HRResumeSchemaCollection.XmlSchemaCollection.sql  HumanResources.JobCandidate.Table.sql  HumanResources.Schema.sql  HumanResources.Shift.Table.sql  HumanResources.uspUpdateEmployeeHireInfo.StoredProcedure.sql  HumanResources.uspUpdateEmployeeLogin.StoredProcedure.sql  HumanResources.uspUpdateEmployeePersonalInfo.StoredProcedure.sql  HumanResources.vEmployee.View.sql  HumanResources.vEmployeeDepartment.View.sql  HumanResources.vEmployeeDepartmentHistory.View.sql  HumanResources.vJobCandidate.View.sql  HumanResources.vJobCandidateEducation.View.sql  HumanResources.vJobCandidateEmployment.View.sql  Person.Address.Table.sql  (+115 more)
rotatingcube/my-direct3d12-app/: CMakeLists.txt  README.md
rotatingcube/my-direct3d12-app/include/: cube.h  renderer.h
rotatingcube/my-direct3d12-app/shaders/: vertex_shader.hlsl
rotatingcube/my-direct3d12-app/src/: cube.cpp  main.cpp  renderer.cpp
(+141 files in other folders)
